--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "browser-sync": "^2.26.7",
     "cross-env": "^6.0.3",
     "del": "^5.1.0",
     "gulp": "^4.0.2",
